fixed tests in executor